feat: adding pest for test and commands to make helper and services

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
+        "pestphp/pest": "^1.23",
+        "pestphp/pest-plugin-laravel": "^1.4",
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
