--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "lucascudo/laravel-pt-br-localization": "^2.1",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^10.5",
+        "pestphp/pest": "^2.34",
+        "pestphp/pest-plugin-laravel": "^2.4",
         "spatie/laravel-ignition": "^2.4"
     },
     "autoload": {
